<package>
  <name>asr_resources_for_psm</name>
  <version>1.0.0</version>
  <description>This package contains resources for probabilistic scene modelling</description>
  <author>Gehrung Joachim, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>Eigen</build_depend>
 <build_depend>asr_msgs</build_depend>
 <build_depend>asr_relation_graph_generator</build_depend>
 <build_depend>asr_lib_ism</build_depend>
 <build_depend>cmake_modules</build_depend>
 
 <run_depend>Eigen</run_depend>
 <run_depend>asr_msgs</run_depend>
 <run_depend>asr_relation_graph_generator</run_depend>
 <run_depend>asr_lib_ism</run_depend>
 <run_depend>cmake_modules</run_depend>
   
</package>


